--- a/1_HTML5/12_HTML실습문제_3.html
+++ b/1_HTML5/12_HTML실습문제_3.html
@@ -36,9 +36,11 @@
 
         자기소개 <br>
       
-        <textarea cols="50" rows="10"></textarea>
-  
+        <textarea cols="50" rows="10" style="resize:none"></textarea>
 
-    </fieldset>
+    </fieldset> <br>
+    <button type="submit">회원가입</button>
+    <button type="reset">다시입력</button>
+    <button type="button">이전으로</button>
 </body>
 </html>
