--- a/1_HTML5/06_영역관련태그.html
+++ b/1_HTML5/06_영역관련태그.html
@@ -193,7 +193,7 @@
     <h3>block : 크기 지정 O</h3>
     <div style = "background-color: orange; width : 200px ; height : 200px">Test</div>
 
-    <h3>block : 크기 지정 X</h3>
+    <h3>inline : 크기 지정 X</h3>
     <span style  = "background-color: coral;  width : 200px ; height : 200px">Test</span>
 
     <hr>
