--- a/1_HTML5/09_입력관련태그.html
+++ b/1_HTML5/09_입력관련태그.html
@@ -42,7 +42,7 @@
 
     <h4>type="password"</h4>
     <p>비밀번호 입력 상자(입력되는 텍스트를 가려줌)</p>
-    비밀번호 : <input type="passwoed" id="pw1">
+    비밀번호 : <input type="password" id="pw1">
 
     <hr>
 
@@ -150,7 +150,7 @@
 
     <hr>
 
-    <h4>type = "checkbox</h4>
+    <h4>type = "checkbox"</h4>
     
     취미 선택 <br>
 
