--- a/2_CSS3/06_CSS선택자6.html
+++ b/2_CSS3/06_CSS선택자6.html
@@ -25,7 +25,7 @@
            지정되는 스타일이 다른 경우 모두 반영된다.
 
         1순위 : !important; 붙은 css 속성
-        2순위 : inine-sytle 속성 (태그에 직접 작성하는 style속성)
+        2순위 : inine-style 속성 (태그에 직접 작성하는 style속성)
         3순위 : 아이디 선택자
         4순위 : 클래스 선택자
         5순위 : 태그 선택자
